Addressed vertical alignment issues
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/internal/Picker/Picker.module.less
+++ b/internal/Picker/Picker.module.less
@@ -13,7 +13,10 @@
 	.sizingPlaceholder,
 	.valueWrapper {
 		.sand-text-base(@sand-picker-font-size);
-		.sand-locale-non-latin({line-height: @sand-button-small-height;});
+		.sand-locale-non-latin({
+			height: @sand-non-latin-picker-line-height;
+			line-height: @sand-non-latin-picker-line-height;
+		});
 		max-width: 960px;
 
 		.item {
