--- a/styles/variables.less
+++ b/styles/variables.less
@@ -256,6 +256,7 @@
 
 // Picker
 @sand-picker-line-height: 1.5em;
+@sand-non-latin-picker-line-height: @sand-non-latin-body-line-height;
 
 // ---------------------------------------
 // Component Rules
